syntax = "proto3";

//#options
option java_multiple_files = true;
option java_package = "example.myapp.helloworld.grpc";
option java_outer_classname = "HelloWorldProto";


package helloworld;
import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";
//#options

//#services
////////////////////////////////////// The greeting service definition.
service GreeterService {
    //////////////////////
    // Sends a greeting //
    ////////*****/////////
    //      HELLO       //
    ////////*****/////////
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }

    // Comment spanning
    // on several lines
    rpc ItKeepsTalking (stream HelloRequest) returns (HelloReply) {
    }

    /*
     * C style comments
     */
    rpc ItKeepsReplying (HelloRequest) returns (stream HelloReply) {
    }

    /* C style comments
     * on several lines
     * with non-empty heading/trailing line */
    rpc StreamHellos (stream HelloRequest) returns (stream HelloReply) {
    }
}

service PositionService {
    rpc GetPositions (PositionRequest) returns (stream PositionReply) {
    }
}

//#services

//#messages
// The request message containing the user's name.

message bigDecimal {
    //    string value = 1 [(scalapb.field).type = "example.myapp.helloworld.BigDecimalMapper"];
    string value = 1;
}

message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

message PositionReply {
    string qcode = 1;
    string volume = 2;// map BigDecimal
    string entryPrice = 3;// map BigDecimal
    google.protobuf.StringValue collateral = 4; // map Option[BigDecimal]
    google.protobuf.StringValue pnl = 5; // map Option[BigDecimal]
}

message PositionRequest {
    string exchangeUri = 1;
    string qcodes = 2;
}

//#messages
